--- a/index.html
+++ b/index.html
@@ -332,7 +332,10 @@
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
 
-              <form action="" method="get">
+              <form
+                action="https://formsubmit.co/ngotruonganh1901@gmail.com"
+                method="POST"
+              >
                 <div class="row">
                   <div class="col-lg-6 col-12">
                     <input
