--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
     <link rel="stylesheet" href="css/tooplate-style.css" />
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather:400,900,900i"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
+    <!-- LOADING -->
+    <div class="loading"></div>
+
     <!-- MENU -->
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
@@ -109,7 +122,9 @@
               </p>
 
               <div class="custom-btn-group mt-4">
-                <a href="https://www.topcv.vn/xem-cv/VFYFBwNQDwYCAVYEUFsLA19eUgNSUgUCXQUFAg1475" class="btn mr-lg-2 custom-btn"
+                <a
+                  href="https://www.topcv.vn/xem-cv/VFYFBwNQDwYCAVYEUFsLA19eUgNSUgUCXQUFAg1475"
+                  class="btn mr-lg-2 custom-btn"
                   ><i class="uil uil-file-alt"></i> Download Resumue</a
                 >
                 <a
@@ -135,7 +150,7 @@
     </section>
 
     <!-- PROJECTS -->
-    <section class="project py-5" id="project">
+    <section class="project py-5" id="project" data-aos="fade-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-11 text-center mx-auto col-12">
@@ -173,6 +188,7 @@
     <section
       class="resume py-5 d-lg-flex justify-content-center align-items-center"
       id="skills"
+      data-aos="fade-right"
     >
       <div class="container mx-auto">
         <div class="row">
@@ -267,7 +283,7 @@
     </section>
 
     <!-- CONTACT -->
-    <section class="contact py-5" id="contact">
+    <section class="contact py-5" id="contact" data-aos="fade-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 mr-lg-5 col-12">
@@ -398,6 +414,9 @@
       </div>
     </footer>
 
+    <!-- BACK TOP TOP -->
+    <a id="button"></a>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -406,5 +425,10 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+    <script src="./js/back-to-top.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
