Update loading progress

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <body>
     <!-- LOADING -->
-    <div class="loading"></div>
+    <div class="progress"></div>
 
     <!-- MENU -->
     <nav class="navbar navbar-expand-sm navbar-light">
@@ -426,6 +426,7 @@
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
     <script src="./js/back-to-top.js"></script>
+    <script src="./js/progress.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
