--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
           </ul>
 
           <ul class="navbar-nav ml-lg-auto">
-            <div class="ml-lg-4">
+            <li class="ml-lg-4">
               <div
                 class="color-mode d-lg-flex justify-content-center align-items-center"
               >
                 <i class="color-mode-icon"></i>
                 Color mode
               </div>
-            </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -109,10 +109,10 @@
               >
               <h1 class="animated animated-text">
                 <span class="mr-2">Hi!, I'm</span>
-                <div class="animated-info">
+                <span class="animated-info">
                   <span class="animated-item">Anh Truong Ngo</span>
                   <span class="animated-item">A Front End Developer</span>
-                </div>
+                </span>
               </h1>
 
               <p>
@@ -125,7 +125,7 @@
                 <a
                   href="https://app.resumecoach.com/share/47a1f4f4a5f743a5b99e9a819cdcb000"
                   class="btn mr-lg-2 custom-btn"
-                  ><i class="uil uil-file-alt"></i> Download Resumue</a
+                  ><i class="uil uil-file-alt"></i> Download Resume </a
                 >
                 <a
                   href="#contact"
@@ -139,7 +139,7 @@
           <div class="col-lg-5 col-md-12 col-12">
             <div class="about-image svg">
               <img
-                src="images/undraw/undraw_software_engineer_lvl5.svg"
+                src="./images/undraw/undraw_software_engineer_lvl5.svg"
                 class="img-fluid"
                 alt="svg image"
               />
@@ -155,14 +155,14 @@
         <div class="row">
           <div class="col-lg-11 text-center mx-auto col-12">
             <div class="col-lg-8 mx-auto">
-              <h2>Pesonal Projects</h2>
+              <h2>Personal Projects</h2>
             </div>
 
             <div class="owl-carousel owl-theme">
               <div class="item">
                 <div class="project-info">
                   <img
-                    src="images/project/project-image01.png"
+                    src="./images/project/project-image01.png"
                     class="img-fluid"
                     alt="project image"
                   />
@@ -172,7 +172,7 @@
               <div class="item">
                 <div class="project-info">
                   <img
-                    src="images/project/project-image02.png"
+                    src="./images/project/project-image02.png"
                     class="img-fluid"
                     alt="project image"
                   />
@@ -290,10 +290,9 @@
             <div class="google-map w-100">
               <img
                 src="./images/undraw/undraw_new_year_2023_pfnc.svg"
-                frameborder="0"
                 style="border: 0"
-                allowfullscreen
                 class="contact-img"
+                alt="contact"
               />
             </div>
 
@@ -387,7 +386,7 @@
                     <input
                       type="submit"
                       class="form-control submit-btn"
-                      value="Send Button"
+                      value="Send"
                     />
                   </div>
                 </div>
@@ -414,7 +413,7 @@
       </div>
     </footer>
 
-    <!-- BACK TOP TOP -->
+    <!-- BACK TO TOP -->
     <a id="button"></a>
 
     <script src="js/jquery-3.3.1.min.js"></script>
@@ -423,7 +422,7 @@
     <script src="js/Headroom.js"></script>
     <script src="js/jQuery.headroom.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
+    <script src="js/smooth-scroll.js"></script>
     <script src="js/custom.js"></script>
     <script src="./js/back-to-top.js"></script>
     <script src="./js/progress.js"></script>
