--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
               <ul class='social-links'>
                 <li>
                   <a
-                    href='https://github.com/ngotruonganhhhhh'
+                    href='https://github.com/ngotruonganh'
                     class='uil uil-game'
                     data-toggle='tooltip'
                     data-placement='left'
@@ -340,7 +340,7 @@
                 </li>
                 <li>
                   <a
-                    href='https://www.instagram.com/ngotruonganhhhhh/'
+                    href='https://www.instagram.com/ngotruonganh1901/'
                     class='uil uil-instagram'
                     data-toggle='tooltip'
                     data-placement='left'
@@ -421,7 +421,7 @@
           <div class='col-lg-12 col-12'>
             <p class='copyright-text text-center'>
               Designed by
-              <a rel='nofollow' href='https://github.com/ngotruonganhhhhh'
+              <a rel='nofollow' href='https://github.com/ngotruonganhh'
                 >Anh Truong Ngo</a
               >
             </p>
