--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           <div class='col-lg-12 col-12'>
             <p class='copyright-text text-center'>
               Designed by
-              <a rel='nofollow' href='https://github.com/ngotruonganhh'
+              <a rel='nofollow' href='https://github.com/ngotruonganh'
                 >Anh Truong Ngo</a
               >
             </p>
