add gg analytics

--- a/index.html
+++ b/index.html
@@ -444,6 +444,15 @@
     <script src='./js/back-to-top.js'></script>
     <script src='./js/progress.js'></script>
     <script src='https://unpkg.com/aos@2.3.1/dist/aos.js'></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F78F69CB5Q"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-F78F69CB5Q');
+    </script>
     <script>
       AOS.init();
     </script>
