--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </nav>
 
     <!-- ABOUT -->
-    <section
+    <div
       class='about full-screen d-lg-flex justify-content-center align-items-center'
       id='about'
     >
@@ -150,10 +150,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- PROJECTS -->
-    <section class='project' id='project' data-aos='fade-left'>
+    <div class='project' id='project' data-aos='fade-left'>
       <div class='container'>
         <div class='row'>
           <div class='col-lg-11 text-center mx-auto col-12'>
@@ -164,11 +164,11 @@
             <div class='owl-carousel owl-theme'>
               <div class='item'>
                 <div class='project-info'>
-                  <a href='https://bookstore-fresher-reactjs.vercel.app/'>
+                  <a href='https://anhngoshop.website'>
                     <img
-                      src='./images/project/project-image1.png'
+                      src='./images/project/project-image-1.png'
                       class='img-fluid'
-                      alt='project image'
+                      alt='shoppe-clone'
                     />
                   </a>
                 </div>
@@ -176,11 +176,11 @@
 
               <div class='item'>
                 <div class='project-info'>
-                  <a href='https://todoappv2-eight.vercel.app/'>
+                  <a href='http://api.anhngoshop.website/api-docs'>
                     <img
-                      src='./images/project/project-image2.png'
+                      src='./images/project/project-image-2.png'
                       class='img-fluid'
-                      alt='project image'
+                      alt='user-manager'
                     />
                   </a>
                 </div>
@@ -189,10 +189,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- SKILLS -->
-    <section
+    <div
       class='resume py-5 d-lg-flex justify-content-center align-items-center'
       id='skills'
       data-aos='fade-right'
@@ -297,10 +297,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- CONTACT -->
-    <section class='contact py-5' id='contact' data-aos='fade-left'>
+    <div class='contact py-5' id='contact' data-aos='fade-left'>
       <div class='container'>
         <div class='row'>
           <div class='col-lg-5 mr-lg-5 col-12'>
@@ -412,10 +412,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- FOOTER -->
-    <footer class='footer'>
+    <div class='footer'>
       <div class='container'>
         <div class='row'>
           <div class='col-lg-12 col-12'>
@@ -428,7 +428,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </div>
 
     <!-- BACK TO TOP -->
     <a id='button'></a>
